<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:contet="com.bingerdranch.android.administrationpanel.MainActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="@string/administration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10sp"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_margin="10sp"
            android:id="@+id/image_view_information"
            android:src="@drawable/icon_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:onClick="onClick"
            android:id="@+id/all_services"
            android:src="@drawable/all_services"
            android:layout_margin="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_name"
                    android:hint="@string/hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/marka"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_marka"
                    android:hint="@string/hint_marka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/model"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_model"
                    android:hint="@string/hint_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/okrug"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_okrug"
                    android:hint="@string/hint_okrug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/rayon"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_rayon"
                    android:hint="@string/hint_rayon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/metro"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_metro"
                    android:hint="@string/hint_metro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/adress"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_adress"
                    android:hint="@string/hint_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/number"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_number"
                    android:hint="@string/hint_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/vid_rabot"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_text_vid_rabot"
                    android:hint="@string/hint_vid_rabot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/rating"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_rating"
                    android:inputType="numberSigned"
                    android:hint="@string/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/ed_grafik_raboti"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_grafik_raboti"
                    android:hint="@string/ed_grafik_raboti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/site"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
                <EditText
                    android:id="@+id/ed_site"
                    android:hint="@string/ed_grafik_raboti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10sp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/button_save"
                    android:text="@string/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/button_clear"
                    android:text="@string/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
